Fixed behaviortest for shifttrade

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -1,7 +1,9 @@
 ﻿.hoverBorder {
 	outline: solid 1px rgba(0, 0, 0, 0.15);
 }
-
+.add-shifttrade-datepicker {
+	
+}
 .request-body-inner ol
 {
 	list-style: none;
@@ -110,6 +112,7 @@
 .request-data-text {
 	word-wrap: break-word;	
 }
+
 .absence-type-input-label 
 {
 	width: 8em;
